--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>GoVue File Server</title>
+    <link href="/css/app.d40fc157.css" rel="preload" as="style">
+    <link href="/js/app.c1e3993b.js" rel="preload" as="script">
+    <link href="/js/chunk-vendors.e21daa36.js" rel="preload" as="script">
+    <link href="/css/app.d40fc157.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <script src="/js/chunk-vendors.e21daa36.js"></script>
+    <script src="/js/app.c1e3993b.js"></script>
+</body>
+
 </html>
